# epita-api

./: LICENSE  README.md  pyproject.toml  setup.py
epitapi/: __init__.py  api.py  api_operator.py  auth.py  cli.py  datatypes.py  epi_grades.py  forge.py  gradeapi.py  grades.py  sorted_group_by.py
