[project]
name = "epitapi"
description = "Python API and CLI to interact with EPITA's Operator service"
version = "0.0.1"
authors = [{ name = "Mathieu Fourré" }]
dependencies = [
  "requests>=2.31",
  "pydantic>=2.5",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pytz>=2023",
  "click>=8.1",
]
requires-python = ">=3.11"
license = { file = "LICENSE" }

[project.urls]
"Homepage" = "https://github.com/mthfrr/epita-api"
"Source" = "https://github.com/mthfrr/epita-api"
"Bug Reports" = "https://github.com/mthfrr/epita-api/issues"

[project.scripts]
epitapi = "epitapi:cli"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
